<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.privacity.MenuActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/editCodigo"
            style="@style/btnStyleOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="gotoVisualizar"
            android:text="@string/mis_permisos" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buscarPerfil"
            style="@style/btnStyleOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="gotoBuscarPerfil"
            android:text="@string/find_perfil" />

        <Button
            android:id="@+id/listaPerfil"
            style="@style/btnStyleOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="gotoListaPerfiles"
            android:text="@string/mis_perfiles" />

    </LinearLayout>


</FrameLayout>
