<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.privacity.BuscarPerfilActivity"
    android:background="@color/gray"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
          >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/inserte"
            android:textAppearance="?android:attr/textAppearanceLarge" />

       <EditText
            android:id="@+id/editEnviarCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:padding="8dp" >
        </EditText>

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/aviso"
           android:textAppearance="?android:attr/textAppearanceMedium" />
       
    </LinearLayout>

    <Button
        android:id="@+id/bttEnviarCodigo"
        style="@style/btnStyleOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:onClick="enviarCodigo"
        android:text="@string/buscar" />

</FrameLayout>
